# ryo-discord-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  docker-compose.yaml  kubernetes.yaml  mise.toml  pyproject.toml  renovate.json
.github/workflows/: docker.yml
app/: Dockerfile
app/script/: main.py
app/script/cogs/: quake_alert.py
app/script/config/: mention.txt  neo_omikuji.txt  omikuji.txt
src/ryo_discord_bot/: __main__.py  config_loader.py  settings.py  storage.py
src/ryo_discord_bot/cogs/: message_watch.py  omikuji.py  reaction_role.py
src/ryo_discord_bot/config/: mention.txt  neo_omikuji.txt
