[project]
name = "ryo-discord-bot"
version = "1.0.0"
description = "ローカルサーバ用の Discord ボット"
authors = [
    { name = "ryo-icy", email = "74962200+ryo-icy@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ryo_discord_bot"
module-root = "src"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
